--- a/css/output.css
+++ b/css/output.css
@@ -979,6 +979,11 @@ video {
   padding: 2rem;
 }
 
+.\!py-4 {
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1075,6 +1080,11 @@ video {
   line-height: 1.5rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1084,12 +1094,21 @@ video {
   font-weight: 700;
 }
 
+.font-normal {
+  font-weight: 400;
+}
+
 .font-semibold {
   font-weight: 600;
 }
 
 .leading-snug {
   line-height: 1.375;
+}
+
+.\!text-black {
+  --tw-text-opacity: 1 !important;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1)) !important;
 }
 
 .\!text-secondary {
@@ -1156,6 +1175,14 @@ video {
 
 [x-cloak]{
   display: none !important;
+}
+
+button, input, optgroup, select, textarea{
+  color: black !important;
+}
+
+label {
+  color: black !important;
 }
 
 /* BreakPoint range [1024 to 1180] */
@@ -1351,4 +1378,9 @@ video {
   .\[\&\>\*\]\:lg\:\!w-1\/4>* {
     width: 25% !important;
   }
+}
+
+.\[\&\>li\>a\]\:\!text-white>li>a {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
 }
